# pfcc

./: LICENSE  pfcc.cabal  stack.yaml
app/: Main.hs
src/: Codegen.hs  Emit.hs  Lexer.hs  Parser.hs  Semant.hs  Syntax.hs
test/examples/: test.cl
