name:                pfcc
version:             0.1.0.0
synopsis:            LLVM front-end for COOL programming language
description:         Please see README.md
homepage:            https://github.com/poiuj/pfcc#readme
license:             BSD3
license-file:        LICENSE
author:              poiuj
maintainer:          poiuj@users.noreply.github.com
copyright:           2016 poiuj
category:            Compilers
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                     , Lexer
                     , Semant
                     , Codegen
                     , Emit
  other-modules:       Syntax
  build-depends:       base >= 4.6 && < 4.10
                     , containers >= 0.5
                     , mtl >= 2.2
                     , parsec
                     , bytestring >= 0.10
                     , llvm-hs >= 4.0
                     , llvm-hs-pure >= 4.0
  default-language:    Haskell2010

executable pfcc
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pfcc
                     , haskeline
                     , mtl
  default-language:    Haskell2010

test-suite pfcc-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pfcc
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/poiuj/pfcc
